# iree

samples/compiler_plugins/: iree_compiler_plugin_group.cmake
samples/compiler_plugins/mlir_tensorrt/: BUILD.bazel  CMakeLists.txt  README.md
samples/compiler_plugins/mlir_tensorrt/src/: CMakeLists.txt  PluginRegistration.cpp
samples/compiler_plugins/mlir_tensorrt/src/mlir_tensorrt/IR/: CMakeLists.txt  MLIRTensorRTDialect.cpp  MLIRTensorRTDialect.h  MLIRTensorRTOps.cpp  MLIRTensorRTOps.h  MLIRTensorRTOps.td
samples/compiler_plugins/mlir_tensorrt/src/mlir_tensorrt/Transforms/: CMakeLists.txt  Passes.h
samples/compiler_plugins/mlir_tensorrt/src/mlir_tensorrt/Transforms/LegalizeMLIRTensorRT/: CMakeLists.txt  LegalizeMLIRTensorRT.cpp  Passes.h  Passes.td
samples/compiler_plugins/mlir_tensorrt/src/mlir_tensorrt/Transforms/MhloDecomposeComplex/: CMakeLists.txt  LegalizeMLIRTensorRT.cpp
samples/compiler_plugins/mlir_tensorrt/test/: CMakeLists.txt  print.mlir  run_mock.py
